[package]
name = "degrugger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clipboard = "0.5.0"
gimli = "0.27.1"
glium = "0.32.1"
imgui = { version = "0.10.0", features = ["docking"] }
imgui-glium-renderer = "0.10.0"
imgui-winit-support = "0.10.0"
linux-personality = "1.0.0"
mint = "0.5.9"
nix = "0.26.2"
object = "0.30.3"
